@@ -92,6 +92,12 @@ away. EPRT and LPRT are extensions to the original FTP protocol, may not work
 on all servers but enable more functionality in a better way than the
 traditional PORT command.
 .TP
+.B enable_pret
+Tell curlftpfs to disable the use of the PRET command before PASV (and EPSV).
+Certain FTP servers, mainly drftpd, require this non-standard command for
+directory listings as well as up and downloads in PASV mode. Has no effect
+when using the active FTP transfers mode.
+.TP
 .B disable_epsv
 Tell curlftpfs to disable the use of the EPSV command when doing passive FTP
 transfers. This is the default.
