@@ -33,6 +33,7 @@ struct ftpfs {
   int tcp_nodelay;
   char* ftp_port;
   int disable_eprt;
+  int enable_pret;
   int connect_timeout;
   int use_ssl;
   int no_verify_hostname;
